// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiPanel is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiPanel props borderRadius m is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow"
/>
`;

exports[`OuiPanel props borderRadius none is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--hasShadow"
/>
`;

exports[`OuiPanel props color accent is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusMedium ouiPanel--accent ouiPanel--noShadow ouiPanel--noBorder"
/>
`;

exports[`OuiPanel props color danger is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusMedium ouiPanel--danger ouiPanel--noShadow ouiPanel--noBorder"
/>
`;

exports[`OuiPanel props color plain is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow"
/>
`;

exports[`OuiPanel props color primary is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusMedium ouiPanel--primary ouiPanel--noShadow ouiPanel--noBorder"
/>
`;

exports[`OuiPanel props color subdued is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusMedium ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder"
/>
`;

exports[`OuiPanel props color success is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusMedium ouiPanel--success ouiPanel--noShadow ouiPanel--noBorder"
/>
`;

exports[`OuiPanel props color transparent is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusMedium ouiPanel--transparent ouiPanel--noShadow"
/>
`;

exports[`OuiPanel props color warning is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusMedium ouiPanel--warning ouiPanel--noShadow ouiPanel--noBorder"
/>
`;

exports[`OuiPanel props grow can be false 1`] = `
<div
  class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPanel--flexGrowZero"
/>
`;

exports[`OuiPanel props hasBorder can be false 1`] = `
<div
  class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPanel--noBorder"
/>
`;

exports[`OuiPanel props hasBorder can be true 1`] = `
<div
  class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPanel--hasBorder"
/>
`;

exports[`OuiPanel props hasShadow can be false 1`] = `
<div
  class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--noShadow"
/>
`;

exports[`OuiPanel props paddingSize l is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow"
/>
`;

exports[`OuiPanel props paddingSize m is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--paddingMedium ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow"
/>
`;

exports[`OuiPanel props paddingSize none is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow"
/>
`;

exports[`OuiPanel props paddingSize s is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--paddingSmall ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow"
/>
`;
